--- a/app/src/main/res/drawable/dialogbg.xml
+++ b/app/src/main/res/drawable/dialogbg.xml
@@ -12,5 +12,5 @@
         android:bottom="10dp"/>
     <stroke
         android:width="2dp"
-        android:color="@color/lavender"/>
+        android:color="@color/bgmain"/>
 </selector>
